--- a/index.html
+++ b/index.html
@@ -6,8 +6,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Alan Chelko</title>
   <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="favicon.ico">
 </head>
 <body>
-  
+  <div>
+    <h1>I'm Alan.</h1>
+    <p>a programmer.</p>
+  </div>
 </body>
 </html>
