--- a/index.html
+++ b/index.html
@@ -9,9 +9,15 @@
   <link rel="stylesheet" href="favicon.ico">
 </head>
 <body>
-  <div>
+  <div class="top-container">
     <h1>I'm Alan.</h1>
     <p>a programmer.</p>
+  </div>
+  <div class="middle-container">
+   
+  </div>
+  <div class="bottom-container">
+    
   </div>
 </body>
 </html>
