--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
   <div class="top-container">
     <img class="top-cloud" src="images/cloud.png" alt="cloud-img">
     <h1>I'm Alan.</h1>
-    <p>a <span class="pro">pro</span>grammer.</p>
+    <h2>a <span class="pro">pro</span>grammer.</h2>
     <img class="bottom-cloud" src="images/cloud.png" alt="cloud-img">
     <img src="images/mountain.png" alt="mountain-img">
   </div>
   <div class="middle-container">
     <div class="profile">
-      <img src="images/g-man.jpg" alt="g-man">
+      <img class="g-man" src="images/g-man.jpg" alt="g-man">
       <h2>Hello.</h2>
       <p>Lorem ipsum dolor sit amet, vitae volutpat, dui conubia, dolor urna. Non auctor, montes nulla distinctio.</p>
     </div>
@@ -29,12 +29,12 @@
     <div class="skills">
       <h2>My Skills.</h2>
       <div class="skill-row">
-        <img class="g-man" src="images/cakey-wakey.jpg" alt="cakey-wakey">
+        <img class="cakey-wakey" src="images/cakey-wakey.jpg" alt="cakey-wakey">
         <h3>Lorem & Ipsum</h3>
         <p>Lorem ipsum dolor sit amet, quis in duis, iaculis id felis. Consectetuer vestibulum, nunc urna lectus, erat ligula. Hendrerit nam, lectus ante, ut lorem eros.</p>
       </div>
       <div class="skill-row">
-        <img class="cakey-wakey" src="images/mackey.jpg" alt="mackey">
+        <img class="mackey" src="images/mackey.jpg" alt="mackey">
         <h3>Lorem Ipsum Dolor</h3>
         <p>Lorem ipsum dolor sit amet, mauris sed consectetuer. Etiam et eu, bibendum interdum, lacus quis mauris. Curabitur wisi, quisque vel eu, rutrum nam.</p>
       </div>
@@ -50,8 +50,8 @@
   <div class="bottom-container">
     <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
     <a class="footer-link" href="https://twitter.com/">Twitter</a>
-    <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
-    <p>© Name Surname.</p>
+    <a class="footer-link" href="https://www.tol.org/">Website</a>
+    <p>© Alan Chelko.</p>
   </div>
 </body>
 </html>
