--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <div class="profile">
       <img class="g-man" src="images/g-man.jpg" alt="g-man">
       <h2>Hello.</h2>
-      <p>Lorem ipsum dolor sit amet, vitae volutpat, dui conubia, dolor urna. Non auctor, montes nulla distinctio.</p>
+      <p class="intro">Lorem ipsum dolor sit amet, vitae volutpat, dui conubia, dolor urna. Non auctor, montes nulla distinctio.</p>
     </div>
     <hr>
     <div class="skills">
@@ -43,7 +43,7 @@
     <div class="contact-me">
       <h2>Get In Touch</h2>
       <h3>Lorem ipsum dolor sit amet, non elit.</h3>
-      <p>Lorem ipsum dolor sit amet, in quis, aenean amet. Phasellus sodales, tellus donec dui, ornare erat.</p>
+      <p class="contact-message">Lorem ipsum dolor sit amet, in quis, aenean amet. Phasellus sodales, tellus donec dui, ornare erat.</p>
       <a class="btn" href="mailto:alan.chelko@tol.org">CONTACT ME</a>
     </div>
   </div>
@@ -51,7 +51,7 @@
     <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
     <a class="footer-link" href="https://twitter.com/">Twitter</a>
     <a class="footer-link" href="https://www.tol.org/">Website</a>
-    <p>© Alan Chelko.</p>
+    <p class="copyright">© Alan Chelko.</p>
   </div>
 </body>
 </html>
